# comfyui-gemini-nodes

./: .gitignore  1.txt  LICENSE  MODEL_LIMITATIONS.md  README.md  README_CN.md  TROUBLESHOOTING.md  UPDATE_SUMMARY.md  __init__.py  index.ts  pyproject.toml  requirements.txt  test_final_stability.py  test_gemini_api.py  test_new_features.py  test_node_retry.py  test_stability.py  test_structured_output.py  test_video_captioner_schema.py
nodes/: GeminiFieldExtractor.py  GeminiImageEditor.py  GeminiImageGenADV.py  GeminiImageProcessor.py  GeminiStructuredOutput.py  GeminiTextAPI.py  GeminiVideoCaptioner.py  GeminiVideoGenerator.py  UnofficialGeminiAPI.py  __init__.py
web/nodes/: GeminiImageGenADV.js  GeminiStructuredOutput.js
